--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <h1>新<br/>年<br/>恭<br/>喜<br/></h1>
-  <p>你能發現狗狗心中的秘密嗎？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">請告訴我 : &copy; 2021 K</a></span></p>
+  <p class="loading">你知道柴犬心中的秘密嗎？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">請告訴我 : &copy; 2021 K</a></span></p>
   <script src="js/three.min.js"></script>
   <script src="js/OrbitControls.js"></script>
   <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
