--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>shiba</title>
+  <title>shiba собака ワンワン</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,7 +22,7 @@
   <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
   <h1>新<br/>年<br/>恭<br/>喜<br/></h1>
   <p class="loading">你知道柴犬心中的秘密嗎？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">請告訴我 : &copy; 2021 K</a></span></p>
+  <p class="ru">У собаки есть секрет в сердце. <br/> Знаешь не ты?？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">Cкажи... </a></span></p>
   <script src="js/shiba.js"></script>
 </body>
-
 </html>
