--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HZW4FW0CXT"></script>
@@ -12,7 +12,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>shiba собака ワンワン</title>
+  <title>shiba</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,8 +20,13 @@
   <script src="js/three.min.js"></script>
   <script src="js/OrbitControls.js"></script>
   <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
-  <h1>新<br/>年<br/>恭<br/>喜<br/></h1>
-  <p class="loading">你知道柴犬心中的秘密嗎？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">請告訴我 : &copy; 2021 K</a></span></p>
+  <!-- <div class="progress_bar">
+    <div class="bar_value">65%</div>
+    <div class="bar_fill"></div>
+  </div> -->
+  <!-- <h1>新<br/>年<br/>恭<br/>喜<br/></h1> -->
+  <!-- <p class="loading">你知道柴犬心中的秘密嗎？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">請告訴我 : &copy; 2021 K</a></span></p> -->
+  <p class="loading">I have a secret...in my mind<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!"> &copy; 2021 K | собака ワンワン</a></span></p>
   <p class="ru">У собаки есть секрет в сердце. <br/> Знаешь ли ты??？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">Cкажи... </a></span></p>
   <script src="js/shiba.js"></script>
 </body>
