--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div> -->
   <!-- <h1>新<br/>年<br/>恭<br/>喜<br/></h1> -->
   <!-- <p class="loading">你知道柴犬心中的秘密嗎？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">請告訴我 : &copy; 2021 K</a></span></p> -->
-  <p class="loading">I have thoughts on my mind! Find them?!</p>
+  <p class="loading">Hi~ Welcome to shiba собака ワンワン!</p>
   <span class="k"><a href="mailto:twodoor1993@gmail.com?subject=I Know!"> &copy; 2021 K <br/> собака ワンワン</a></span>
   <p class="ru">У собаки есть секрет в сердце. <br/> Знаешь ли ты??？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">Cкажи... </a></span></p>
   <script src="js/shiba.js"></script>
