--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
   <script src="js/three.min.js"></script>
   <script src="js/OrbitControls.js"></script>
   <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
-  <!-- <div class="progress_bar">
-    <div class="bar_value">65%</div>
-    <div class="bar_fill"></div>
-  </div> -->
+  <div id="loadScreen">
+    <div id="loader"></div>
+  </div>
   <!-- <h1>新<br/>年<br/>恭<br/>喜<br/></h1> -->
   <!-- <p class="loading">你知道柴犬心中的秘密嗎？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">請告訴我 : &copy; 2021 K</a></span></p> -->
-  <p class="loading">Hi~ Welcome to shiba собака ワンワン!</p>
+  <p class="loading">Hi~我是太空柴犬～</p>
   <span class="k"><a href="mailto:twodoor1993@gmail.com?subject=I Know!"> &copy; 2021 K <br/> собака ワンワン</a></span>
   <p class="ru">У собаки есть секрет в сердце. <br/> Знаешь ли ты??？<span><a href="mailto:twodoor1993@gmail.com?subject=I Know!">Cкажи... </a></span></p>
   <script src="js/shiba.js"></script>
